# API_Agendamento_de_consultas

./: alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 0d3d129a3f23_tabelas_pacientes_profissionais_e_.py  34cb028d8da6_adicionado_cpf_na_tabela_de_pacientes.py
src/: main.py
src/models/entities/: consulta.py  paciente.py  profissional.py
src/models/repositories/: consulta_repo.py  paciente_repo.py  profissional_repo.py
src/schemas/: paciente_schema.py
src/settings/: config_env.py  engine.py  exceptions.py  regristy.py  security.py  session.py
