[project]
name = "api-agendamento"
version = "0.1.0"
description = ""
authors = [
    {name = "Wellyson Balbino",email = "wellysonjose115@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi[standard] (>=0.128.3,<0.129.0)",
    "sqlalchemy[asyncio] (>=2.0.46,<3.0.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]

[tool.ruff]
line-length= 82
exclude = ['migrations']
		
[tool.ruff.lint]
preview= true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
		
[tool.ruff.format]
preview = true
quote-style= 'single'
		
[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'
		
[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format= 'ruff format'
run= 'poetry run fastapi dev src/main.py'
test = 'pytest -s -x --cov=src -vv'
post_test = 'coverage html'


[tool.coverage.run]
core = "ctrace"
concurrency = ["thread", "greenlet"]


[tool.poetry]
packages = [{include = "api_agendamento", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.15.0,<0.16.0)"
]
